<resources>
    <string name="app_name">CIS433Homework2</string>
    <string name="app_title">CIS 433 Shopping List</string>
    <string name="add_item_label">Add Item…</string>
    <string name="frequent_items_label">Add frequent items below</string>
    <string name="frequent_item_1">Apple</string>
    <string name="frequent_item_2">Bread</string>
    <string name="frequent_item_3">Eggs</string>
    <string name="frequent_item_4">Milk</string>
    <string name="frequent_item_5">Sugar</string>
    <string name="item_1">1. Milk</string>
    <string name="item_2">2. TextView</string>
    <string name="item_3">3. TextView</string>
    <string name="item_4">4. TextView</string>
    <string name="item_5">5. TextView</string>
    <string name="item_6">6. Milk</string>
    <string name="item_7">7. TextView</string>
    <string name="item_8">8. TextView</string>
    <string name="item_9">9. TextView</string>
    <string name="item_10">10. TextView</string>
    <string name="item_11">11. Milk</string>
    <string name="item_12">12. TextView</string>
    <string name="item_13">13. TextView</string>
    <string name="item_14">14. TextView</string>
    <string name="item_15">15. TextView</string>
</resources>