<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ShoppingList">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Shopping List"
        android:textSize="30sp"
        android:layout_marginTop="25dp"
        android:layout_gravity="center"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:insetLeft="5dp"
            android:insetRight="5dp"
            android:text="Add More Items"
            android:onClick="onAddMoreItemsClick"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:insetLeft="5dp"
            android:insetRight="5dp"
            android:text="Delete All Items"
            android:onClick="onDeleteAllClick"/>
    </LinearLayout>

    <TextView
        android:id="@+id/item_1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/item_1" />

    <TextView
        android:id="@+id/item_2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/item_2"
        android:layout_gravity="center"
        android:gravity="center"/>

    <TextView
        android:id="@+id/item_3"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/item_3"
        android:layout_gravity="center"
        android:gravity="center"/>

    <TextView
        android:id="@+id/item_4"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/item_4"
        android:layout_gravity="center"
        android:gravity="center"/>
    <TextView
        android:id="@+id/item_5"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/item_5"
        android:layout_gravity="center"
        android:gravity="center"/>

    <TextView
        android:id="@+id/item_6"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/item_6" />

    <TextView
        android:id="@+id/item_7"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/item_7"
        android:layout_gravity="center"
        android:gravity="center"/>

    <TextView
        android:id="@+id/item_8"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/item_8"
        android:layout_gravity="center"
        android:gravity="center"/>

    <TextView
        android:id="@+id/item_9"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/item_9"
        android:layout_gravity="center"
        android:gravity="center"/>
    <TextView
        android:id="@+id/item_10"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/item_10"
        android:layout_gravity="center"
        android:gravity="center"/>


    <TextView
        android:id="@+id/item_11"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/item_11" />

    <TextView
        android:id="@+id/item_12"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/item_12"
        android:layout_gravity="center"
        android:gravity="center"/>

    <TextView
        android:id="@+id/item_13"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/item_13"
        android:layout_gravity="center"
        android:gravity="center"/>

    <TextView
        android:id="@+id/item_14"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/item_14"
        android:layout_gravity="center"
        android:gravity="center"/>
    <TextView
        android:id="@+id/item_15"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/item_15"
        android:layout_gravity="center"
        android:gravity="center"/>

    <EditText
        android:id="@+id/indexToDelete"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="number"
        android:hint="Enter the index of the item to delete" />

    <Button
        android:id="@+id/deleteIndexBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="Click to Delete"
        android:onClick="onDeleteSpecificItem"/>


</LinearLayout>