<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="25dp"
        android:textSize="30sp"/>

    <EditText
        android:id="@+id/addItem"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="text"
        android:hint="Add Item..."
        android:layout_gravity="center"
        android:gravity="center"/>

    <Button
        android:id="@+id/addItemButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="Add Item"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:onClick="onAddItemClick"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/frequent_items_label"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/frequent_item_1"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:text="@string/frequent_item_1"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:onClick="onFrequentItemClick"/>

    <Button
        android:id="@+id/frequent_item_2"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:text="@string/frequent_item_2"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:onClick="onFrequentItemClick"/>

    <Button
        android:id="@+id/frequent_item_3"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:text="@string/frequent_item_3"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:onClick="onFrequentItemClick"/>

    <Button
        android:id="@+id/frequent_item_4"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:text="@string/frequent_item_4"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:onClick="onFrequentItemClick"/>

    <Button
        android:id="@+id/frequent_item_5"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:text="@string/frequent_item_5"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:onClick="onFrequentItemClick"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/showListButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="Show Shopping List"
        android:onClick="onShowListClick"/>

</LinearLayout>